# Army

./: Army.h  CMakeList.txt  CMakeLists.txt  README.md  exceptions.h  main.cpp
Interface/: Observable.cpp  Observable.h  Observer.cpp  Observer.h
ability/: Ability.cpp  Ability.h  DefaultAbility.cpp  DefaultAbility.h  HealerAbility.cpp  HealerAbility.h  MagicAbility.cpp  MagicAbility.h  NecroAbility.cpp  NecroAbility.h  PriestAbility.cpp  PriestAbility.h  RogueAbility.cpp  RogueAbility.h  VampireAbility.cpp  VampireAbility.h  WarlockAbility.cpp  WarlockAbility.h  WerewolfAbility.cpp  WerewolfAbility.h  WizardAbility.cpp  WizardAbility.h
spell/: DarkMagic.cpp  DarkMagic.h  FireBall.cpp  FireBall.h  Heal.cpp  Heal.h  Lightning.cpp  Lightning.h  Spell.cpp  Spell.h  SpellBook.cpp  SpellBook.h
spellcaster/: Healer.cpp  Healer.h  Necromancer.cpp  Necromancer.h  Priest.cpp  Priest.h  SpellCaster.cpp  SpellCaster.h  Warlock.cpp  Warlock.h  Wizard.cpp  Wizard.h
src/: Exlibs.cpp
state/: BerserkerState.cpp  BerserkerState.h  MagicState.cpp  MagicState.h  NecroState.cpp  NecroState.h  State.cpp  State.h  TurnWolfState.cpp  TurnWolfState.h  VampireState.cpp  VampireState.h  WerewolfState.cpp  WerewolfState.h
tests/: tests.cpp
unit/: Berserker.cpp  Berserker.h  Berserker.h.gch  Demon.cpp  Demon.h  Rogue.cpp  Soldier.cpp  Soldier.h  Unit.cpp  Unit.h  Vampire.cpp  Vampire.h  Werewolf.cpp  Werewolf.h
